--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -51,12 +51,14 @@
                     ¿Codeamos juntos?
                 </h1>
                 <p class="my-5">
-                    Soy desarrolladora web Front End, egresada del bootcamp de Laboratoria. Tengo experiencia en
-                    Javascript y React, también he desarrollado proyectos usando HTML5 Y CSS3. Estoy aprendiendo a
-                    trabajar con Bootstrap.
+                    Soy desarrolladora web Front End, egresada del bootcamp de <a
+                        href="https://www.laboratoria.la/">Laboratoria</a>
+                    Tengo experiencia en Javascript y React, también he desarrollado proyectos usando HTML5 Y CSS3 y
+                    Bootstrap.
                     He trabajado en entornos como Node Js. Diseñé y maqueté en Figma y tengo experiencia en el uso de
-                    control de versiones. Me interesa la ciencia de datos y el desarrollo backend es por ello que estoy
-                    estudiando desarrollo Full Stack en el bootcamp de Desafío Latam.
+                    control de versiones. Me interesa la ciencia de datos y el desarrollo Back End es por ello que estoy
+                    estudiando desarrollo Full Stack en el bootcamp de <a href="https://desafiolatam.com/">Desafío
+                        Latam</a>
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Proyectos</button>
