--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                             repudiandae neque rem adipisci repellendus libero illo quo
                             blanditiis, velit quasi ad, recusandae voluptates officia.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
+                        <button type="button" class="btn btn-info">
+                            <a href="https://gfielstedt.github.io/DEV002-cipher/">Ver más</a>
                         </button>
                     </div>
                 </div>
@@ -147,8 +147,8 @@
                             consequatur quos error fuga excepturi quo. Laudantium optio
                             pariatur laboriosam modi, ea molestias?
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
+                        <button type="button" class="btn btn-info">
+                            <a href="https://gfielstedt.github.io/DEV002-data-lovers/">Ver más</a>
                         </button>
                     </div>
                 </div>
@@ -164,8 +164,8 @@
                             corporis facilis qui architecto dolor, accusamus eveniet
                             exercitationem fugit. Quod autem neque ducimus.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
+                        <button type="button" class="btn btn-info">
+                            <a href="https://tourmaline-marshmallow-89b890.netlify.app/">Ver más</a>
                         </button>
                     </div>
                 </div>
